--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">NumberPulzzGame</string>
+    <string name="app_name">Puzzle</string>
+    <string name="slot_play">1</string>
     <string name="settings">Settings</string>
     <string name="help">Help</string>
     <string name="new_game">New Game</string>
